distributions/stacks/openshift/application/istio-1-3-1-stack/ingressgateway.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
    release: istio
spec:
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  port:
    targetPort: http2
  wildcardPolicy: None
